--- a/index.html
+++ b/index.html
@@ -6,44 +6,58 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=2, user-scalable=yes" />
 
-    <title>Sarwan Yadav – Full Stack Developer & Designer Portfolio</title>
+    <title>Sarwan Yadav | Full Stack Developer & UI/UX Designer Portfolio</title>
 
     <!-- Primary Meta Tags -->
-    <meta name="title" content="Sarwan Yadav – Full Stack Developer & Designer Portfolio" />
+    <meta name="title" content="Sarwan Yadav | Full Stack Developer & UI/UX Designer Portfolio" />
     <meta name="description"
-        content="Explore Sarwan Yadav’s professional portfolio showcasing skills in web development, design, and projects. Available for freelance & full-time opportunities." />
+        content="Portfolio of Sarwan Yadav, showcasing expertise in web development, UI/UX design, and software projects. Available for freelance and full-time opportunities." />
     <meta name="keywords"
-        content="Sarwan Yadav, Full Stack Developer, Web Developer Portfolio, UI/UX Designer, Frontend Developer, Backend Developer, Sarwan Portfolio, Personal Website" />
+        content="Sarwan Yadav, Full Stack Developer, Web Developer, UI/UX Designer, Software Developer, Portfolio, Frontend Developer, Backend Developer" />
     <meta name="author" content="Sarwan Yadav" />
     <meta name="robots" content="index, follow" />
     <meta name="language" content="English" />
 
-    <!-- Open Graph / Facebook Meta -->
+    <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://sarwan.netlify.app/" />
-    <meta property="og:title" content="Sarwan Yadav – Full Stack Developer Portfolio" />
+    <meta property="og:title" content="Sarwan Yadav | Full Stack Developer Portfolio" />
     <meta property="og:description"
-        content="Discover the projects and skills of Sarwan Yadav, a passionate developer and designer." />
+        content="Explore Sarwan Yadav's creative portfolio - web development, UI/UX design, and application projects." />
     <meta property="og:image" content="https://sarwan.netlify.app/assets/images/og-image.jpg" />
 
-    <!-- Twitter Card Meta -->
+    <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:url" content="https://sarwan.netlify.app/" />
-    <meta name="twitter:title" content="Sarwan Yadav – Full Stack Developer Portfolio" />
-    <meta name="twitter:description" content="Discover the work and creativity of Sarwan Yadav." />
+    <meta name="twitter:title" content="Sarwan Yadav | Full Stack Developer Portfolio" />
+    <meta name="twitter:description"
+        content="Discover the work and projects of Sarwan Yadav, passionate developer and designer." />
     <meta name="twitter:image" content="https://sarwan.netlify.app/assets/images/og-image.jpg" />
 
-    <!-- Preconnect for Performance -->
+    <!-- Preconnects for Speed -->
     <link rel="preconnect" href="https://cdnjs.cloudflare.com" crossorigin />
     <link rel="preconnect" href="https://code.jquery.com" crossorigin />
     <link rel="preconnect" href="https://api.mapbox.com" crossorigin />
     <link rel="preconnect" href="https://sarwan.netlify.app" crossorigin />
 
-    <!-- Preload Key Assets for better performance -->
-    <link rel="preload" href="assets/css/style.css" as="style" />
+    <!-- Preloads -->
+    <link rel="preload" href="/assets/css/style.css" as="style" />
     <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
         as="style" />
-    <link rel="preload" href="assets/js/script.js" as="script" />
+    <link rel="preload" href="/assets/js/script.js" as="script" />
+
+    <!-- Favicon & App Icons -->
+    <link rel="icon" type="image/png" href="/assets/favicon/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="/assets/favicon/favicon.svg" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon/apple-touch-icon.png" />
+    <link rel="shortcut icon" href="/assets/favicon/favicon.ico" />
+    <link rel="manifest" href="/assets/favicon/site.webmanifest" />
+
+    <!-- Theme Colors -->
+    <meta name="theme-color" content="#ffffff" />
+    <meta name="msapplication-TileColor" content="#0011ff" />
+    <meta name="application-name" content="Sarwan Yadav Portfolio" />
+    <meta name="apple-mobile-web-app-title" content="Sarwan Yadav" />
 
     <!-- Stylesheets -->
     <link rel="stylesheet" href="assets/css/style.css" />
@@ -55,42 +69,11 @@
         integrity="sha512-fD9DI5bZwQxOi7MhYWnnNPlvXdp/2Pj3XSTRrFs5FQa4mizyGLnJcN6tuvUS6LbmgN1ut+XGSABKvjN0H6Aoow=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
-    <!-- Favicon -->
-    <link rel="icon" href="assets/favicon/favicon.ico" type="image/x-icon" />
-
-    <!-- Standard Favicons -->
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="96x96" href="assets/favicon/favicon-96x96.png" />
-    <link rel="icon" type="image/png" sizes="192x192" href="assets/favicon/android-chrome-192x192.png" />
-    <link rel="icon" type="image/png" sizes="512x512" href="assets/favicon/android-chrome-512x512.png" />
-
-    <!-- PWA App Icons (from site.webmanifest) -->
-    <link rel="icon" type="image/png" sizes="192x192" href="assets/favicon/web-app-manifest-192x192.png" />
-    <link rel="icon" type="image/png" sizes="512x512" href="assets/favicon/web-app-manifest-512x512.png" />
-
-    <!-- Apple Touch Icon -->
-    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png" />
-
-    <!-- Manifest for PWA -->
-    <link rel="manifest" href="assets/favicon/site.webmanifest" />
-
-    <!-- Safari pinned tab -->
-    <link rel="mask-icon" href="assets/favicon/favicon.svg" color="#0011ff" />
-
-    <!-- Microsoft Tiles -->
-    <meta name="msapplication-TileColor" content="#0011ff" />
-    <meta name="theme-color" content="#ffffff" />
-    <meta name="apple-mobile-web-app-title" content="Sarwan Yadav" />
-    <meta name="application-name" content="Sarwan Yadav" />
-    <meta name="msapplication-tooltip" content="Sarwan Yadav – Full Stack Developer Portfolio" />
-    <meta name="msapplication-starturl" content="https://sarwan6174.github.io/sarwan6174/" />
-
 </head>
 
 <body>
-    <!-- Scroll to Top Button -->
-    <div class="scroll-up-btn">
+    <!-- Scroll To Top Button -->
+    <div class="scroll-up-btn" aria-label="Scroll to top">
         <i class="fas fa-angle-up"></i>
     </div>
 
@@ -118,9 +101,9 @@
     <section class="home" id="home">
         <div class="max-width">
             <div class="home-content">
-                <div class="text-1">Greetings, I am</div>
-                <div class="text-2">Sarwan Yadav</div>
-                <div class="text-3">and I'm a <span class="typing"></span></div>
+                <h1 class="text-1">Hello, I'm</h1>
+                <h2 class="text-2">Sarwan Yadav</h2>
+                <h3 class="text-3">A <span class="typing"></span></h3>
             </div>
         </div>
     </section>
@@ -131,19 +114,15 @@
             <h2 class="title">About Me</h2>
             <div class="about-content">
                 <div class="column left">
-                    <img src="assets/images/profile.webp" alt="Sarwan Yadav" />
+                    <img src="/assets/images/profile.webp" alt="Sarwan Yadav - Full Stack Developer and Designer"
+                        loading="lazy" />
                 </div>
                 <div class="column right">
-                    <div class="text">
-                        I'm Sarwan and I'm a <span class="typing-2"></span>
-                    </div>
-                    <p>
-                        I am a 12th-grade student from India with a passion for coding. My
-                        goal is to build creative and efficient projects, including
-                        websites, apps, and software programs. I'm the founder of
-                        <a href="https://ellowdigitals.me/" target="_blank" rel="noopener noreferrer">EllowDigitals</a>,
-                        a digital agency committed to delivering innovative solutions.
-                    </p>
+                    <div class="text">I'm Sarwan and I'm a <span class="typing-2"></span></div>
+                    <p>I am a 12th-grade student from India passionate about web development, software engineering, and
+                        creative design. Founder of <a href="https://ellowdigitals.me/" target="_blank"
+                            rel="noopener noreferrer">EllowDigitals</a>, I focus on building modern, user-friendly
+                        digital solutions for businesses and individuals worldwide.</p>
                 </div>
             </div>
         </div>
@@ -158,9 +137,7 @@
                     <div class="box">
                         <i class="fas fa-paint-brush"></i>
                         <div class="text">Web Design</div>
-                        <p>
-                            Beautiful, responsive, and custom-designed websites tailored to
-                            your brand.
+                        <p>Responsive, attractive, and brand-focused website designs to enhance your online presence.
                         </p>
                     </div>
                 </div>
@@ -168,20 +145,14 @@
                     <div class="box">
                         <i class="fas fa-code"></i>
                         <div class="text">Web Development</div>
-                        <p>
-                            Modern and scalable web applications built with performance and
-                            UX in mind.
-                        </p>
+                        <p>Modern and efficient web development services tailored for speed, SEO, and scalability.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
                         <i class="fas fa-desktop"></i>
                         <div class="text">App Development</div>
-                        <p>
-                            Creating efficient desktop apps for Windows and Android
-                            platforms.
-                        </p>
+                        <p>Custom Windows and Android applications designed for performance and usability.</p>
                     </div>
                 </div>
             </div>
@@ -194,13 +165,9 @@
             <h2 class="title">My Skills</h2>
             <div class="skills-content">
                 <div class="column left">
-                    <div class="text">My creative skills & experiences</div>
-                    <p>
-                        I specialize in HTML (90%), CSS (60%), JavaScript (40%), PHP
-                        (25%), Python (75%), and MySQL (70%). These skills have helped me
-                        bring various projects to life and continue growing as a
-                        developer.
-                    </p>
+                    <div class="text">Creative Skills & Experience</div>
+                    <p>Proficient in HTML (90%), CSS (60%), JavaScript (40%), PHP (25%), Python (75%), and MySQL (70%).
+                        I craft interactive, secure, and high-performing projects that solve real-world problems.</p>
                 </div>
                 <div class="column right">
                     <div class="bars">
@@ -239,14 +206,15 @@
             <div class="carousel owl-carousel">
                 <div class="card">
                     <div class="box">
-                        <img src="assets/images/member-1.webp" alt="Sarwan Yadav" />
+                        <img src="/assets/images/member-1.webp" alt="Sarwan Yadav - Web Developer" loading="lazy" />
                         <div class="text">Sarwan Yadav</div>
                         <p>Web Developer</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="assets/images/member-2.webp" alt="Sarwan Yadav" />
+                        <img src="/assets/images/member-2.webp" alt="Sarwan Yadav - Software Developer"
+                            loading="lazy" />
                         <div class="text">Sarwan Yadav</div>
                         <p>Software Developer</p>
                     </div>
@@ -262,7 +230,7 @@
             <div class="contact-content">
                 <div class="column left">
                     <div class="text">Get in Touch</div>
-                    <p>Fill out the form or reach me through the contact info below:</p>
+                    <p>Feel free to reach out for collaborations or freelance projects!</p>
                     <div class="icons">
                         <div class="row">
                             <i class="fas fa-user"></i>
@@ -274,8 +242,8 @@
                         <div class="row">
                             <i class="fas fa-map-marker-alt"></i>
                             <div class="info">
-                                <div class="head">Address</div>
-                                <div class="sub-title">Lucknow, Uttar Pradesh</div>
+                                <div class="head">Location</div>
+                                <div class="sub-title">Lucknow, Uttar Pradesh, India</div>
                             </div>
                         </div>
                         <div class="row">
@@ -292,27 +260,26 @@
                     <form action="https://formsubmit.co/sarwanyadav6174@gmail.com" method="POST">
                         <div class="fields">
                             <div class="field name">
-                                <input type="text" name="name" placeholder="Name" required />
+                                <input type="text" name="name" placeholder="Your Name" required />
                             </div>
                             <div class="field email">
-                                <input type="email" name="email" placeholder="Email" required />
+                                <input type="email" name="email" placeholder="Your Email" required />
                             </div>
                         </div>
                         <div class="field">
-                            <input type="text" name="project" placeholder="Subject" required />
+                            <input type="text" name="subject" placeholder="Subject" required />
                         </div>
                         <div class="field textarea">
-                            <textarea name="message" cols="30" rows="10" placeholder="Message..." required></textarea>
+                            <textarea name="message" cols="30" rows="10" placeholder="Your Message" required></textarea>
                         </div>
-                        <input type="hidden" name="_template" value="table" />
-                        <input type="hidden" name="_subject" value="New submission!" />
-                        <input type="hidden" name="_captcha" value="false" />
+                        <input type="hidden" name="_template" value="table">
+                        <input type="hidden" name="_subject" value="New Portfolio Message!">
+                        <input type="hidden" name="_captcha" value="false">
                         <input type="hidden" name="_next"
-                            value="https://sarwan6174.github.io/sarwan6174/redict/thanks.html" />
+                            value="https://sarwan6174.github.io/sarwan6174/redict/thanks.html">
                         <div class="button">
-                            <button type="submit" aria-label="Send message">
-                                Send Message <i class="fas fa-paper-plane"></i>
-                            </button>
+                            <button type="submit" aria-label="Send Message">Send Message <i
+                                    class="fas fa-paper-plane"></i></button>
                         </div>
                     </form>
                 </div>
@@ -321,31 +288,12 @@
     </section>
 
     <!-- Footer -->
-    <!-- footer section start -->
     <footer>
         <span>
-            © 2024 All rights reserved | Created by
-            <a href="#home">Sarwan Yadav</a> | Designed & Maintained by
-            <a href="https://ellowdigitals.netlify.app/" target="_blank" rel="noopener noreferrer">
-                EllowDigitals
-            </a>
+            © 2024 Sarwan Yadav. All rights reserved. Designed and maintained by
+            <a href="https://ellowdigitals.netlify.app/" target="_blank" rel="noopener noreferrer">EllowDigitals</a>.
         </span>
     </footer>
-
-    <!-- Service Worker -->
-    <script>
-        if ('serviceWorker' in navigator) {
-            navigator.serviceWorker.register('/service-worker.js')
-                .then(registration => {
-                    console.log('Service Worker registered with scope:', registration.scope);
-                })
-                .catch(error => {
-                    console.error('Service Worker registration failed:', error);
-                });
-        }
-
-    </script>
-
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.11/typed.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/3.0.0/noframework.waypoints.min.js"
