--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <meta property="og:url" content="https://sarwan.netlify.app/" />
     <meta property="og:title" content="Sarwan Yadav | Full Stack Developer Portfolio" />
     <meta property="og:description"
-        content="Explore Sarwan Yadav's creative portfolio - web development, UI/UX design, and application projects." />
+        content="Explore Sarwan Yadav's creative portfolio showcasing expertise in web development, UI/UX design, and software projects." />
     <meta property="og:image" content="https://sarwan.netlify.app/assets/images/og-image.jpg" />
 
     <!-- Twitter -->
@@ -31,7 +31,7 @@
     <meta name="twitter:url" content="https://sarwan.netlify.app/" />
     <meta name="twitter:title" content="Sarwan Yadav | Full Stack Developer Portfolio" />
     <meta name="twitter:description"
-        content="Discover the work and projects of Sarwan Yadav, passionate developer and designer." />
+        content="Discover the work and projects of Sarwan Yadav, a passionate developer and designer." />
     <meta name="twitter:image" content="https://sarwan.netlify.app/assets/images/og-image.jpg" />
 
     <!-- Preconnects for Speed -->
@@ -40,21 +40,17 @@
     <link rel="preconnect" href="https://api.mapbox.com" crossorigin />
     <link rel="preconnect" href="https://sarwan.netlify.app" crossorigin />
 
-    <!-- Preloads -->
-    <link rel="preload" href="/assets/css/style.css" as="style" />
-    <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
-        as="style" />
-    <link rel="preload" href="/assets/js/script.js" as="script" />
-
     <!-- Favicon & App Icons -->
     <link rel="icon" type="image/png" href="/assets/favicon/favicon-96x96.png" sizes="96x96" />
     <link rel="icon" type="image/svg+xml" href="/assets/favicon/favicon.svg" />
+    <link rel="icon" type="image/png" href="assets/favicon/favicon-32x32.png" sizes="32x32" />
+    <link rel="icon" type="image/png" href="assets/favicon/favicon-16x16.png" sizes="16x16" />
     <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon/apple-touch-icon.png" />
     <link rel="shortcut icon" href="/assets/favicon/favicon.ico" />
     <link rel="manifest" href="/assets/favicon/site.webmanifest" />
 
     <!-- Theme Colors -->
-    <meta name="theme-color" content="#ffffff" />
+    <meta name="theme-color" content="#4b4bff;" />
     <meta name="msapplication-TileColor" content="#0011ff" />
     <meta name="application-name" content="Sarwan Yadav Portfolio" />
     <meta name="apple-mobile-web-app-title" content="Sarwan Yadav" />
@@ -250,7 +246,7 @@
                             <i class="fas fa-envelope"></i>
                             <div class="info">
                                 <div class="head">Email</div>
-                                <div class="sub-title">rangersarwan@gmail.com</div>
+                                <div class="sub-title">sarwanyadav6174@gmail.com</div>
                             </div>
                         </div>
                     </div>
