--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <nav class="navbar">
         <div class="max-width">
             <div class="logo">
-                <a href="https://ellowdigitals.netlify.app/">ellow<span>digitals.</span></a>
+                <a href="https://ellowdigitals.netlify.app/">sarwan<span>😎</span></a>
             </div>
             <ul class="menu">
                 <li><a href="#home" class="menu-btn">Home</a></li>
@@ -121,7 +121,7 @@
                     <p>
                         I am a 12th-grade student from India passionate about web
                         development, software engineering, and creative design. Founder of
-                        <a href="https://ellowdigitals.me/" target="_blank" rel="noopener noreferrer">EllowDigitals</a>,
+                        <a href="https://ellowdigitals.me/" target="_blank" rel="noopener noreferrer">EllowDigital</a>,
                         I focus on building modern, user-friendly digital solutions for
                         businesses and individuals worldwide.
                     </p>
@@ -306,8 +306,8 @@
     <!-- Footer -->
     <footer>
         <span>
-            © 2024 Sarwan Yadav. All rights reserved. Designed and maintained by
-            <a href="https://ellowdigitals.netlify.app/" target="_blank" rel="noopener noreferrer">EllowDigitals</a>.
+            © 2025 Sarwan Yadav. All rights reserved. Designed and maintained by
+            <a href="https://ellowdigitals.netlify.app/" target="_blank" rel="noopener noreferrer">EllowDigital</a>.
         </span>
     </footer>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
